Fixing bug 318270. Fix refcount problem in ns4xPluginInstance::GetDOMWindow() that lead to crashes due to window objects being deleted too quickly. r=mrbkap@gmail.com, r+sr=bzbarsky@mit.edu